<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="acceptAndContinue">Accept and Continue</string>
    <string name="addyear">Add Year</string>
    <string name="amortization_calculator">Amortization Calculator</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Financial Calculator</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="art">Art</string>
    <string name="assets">Assets</string>
    <string name="auto_loan_calculator">Auto Loan Calculator</string>
    <string name="auto_loans">Auto Loans</string>
    <string name="balance">Balance</string>
    <string name="boat">Boats</string>
    <string name="bond_yield_calculator">Bond Yield Calculator</string>
    <string name="bonds">Bonds</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="business">Business Interests</string>
    <string name="calculate">CALCULATE</string>
    <string name="car">Cars</string>
    <string name="car_lease_calculator">Car Lease Calculator</string>
    <string name="cash">Cash</string>
    <string name="cashflow">Cash Flow</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="checking">Checking Accounts</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="collect">Collectibles</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="compare">COMPARE</string>
    <string name="compound_interest_calculator">Compound Interest calculator</string>
    <string name="compounded">Compounded</string>
    <string name="couponrate">Coupon Rate</string>
    <string name="credit">Credit Cards</string>
    <string name="current_loan">Current Loan</string>
    <string name="currentprice">Current Price</string>
    <string name="currentyield">Current Yield</string>
    <string name="deprecation_charge">Deprecation Charge</string>
    <string name="disc">Discount Rate</string>
    <string name="discount">Discount Rate</string>
    <string name="dollar">$</string>
    <string name="down_payment">Down Payment</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="error_icon_content_description">Error</string>
    <string name="expenses">Expenses</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fees">Fees</string>
    <string name="finance">Finance Calculator</string>
    <string name="finance_charge">Finance Charge</string>
    <string name="future">Future value</string>
    <string name="gross">Gross Yield</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="home">Home Furnishings</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="initial_investment">Initial Investment</string>
    <string name="interest">Interest</string>
    <string name="interest_only_calculator">Interest Only Calculator</string>
    <string name="interest_only_payment">Interest Only Payment</string>
    <string name="interest_only_period">Interest Only Period</string>
    <string name="interest_rate">Interest Rate</string>
    <string name="interestamount">Interest</string>
    <string name="internal_rate_of_return_calculator">Internal Rate of Return Calculator</string>
    <string name="invest">Investment Assets</string>
    <string name="investedamount">Amount Invested</string>
    <string name="investloan">Investment Loans</string>
    <string name="investment">Investment</string>
    <string name="iras">IRAs</string>
    <string name="item_view_role_description">Tab</string>
    <string name="jewelry">Jewelry</string>
    <string name="keogh">Keogh Accounts</string>
    <string name="ks">401Ks</string>
    <string name="leases">Leases</string>
    <string name="liabilities">Liabilities</string>
    <string name="life">Life insurance</string>
    <string name="liquid">Liquid Assets</string>
    <string name="loan">Short Term Loans</string>
    <string name="loan_1">Loan 1</string>
    <string name="loan_2">Loan 2</string>
    <string name="loan_affordability_calculator">Loan Affordability Calculator</string>
    <string name="loan_amount">Loan Amount</string>
    <string name="loan_balance">Loan Balance</string>
    <string name="loan_comparison_calculator">Loan Comparison Calculator</string>
    <string name="loanfinance">Loan &amp; Finance Planner</string>
    <string name="loans">Loans</string>
    <string name="longterm">Long Term Liabilities</string>
    <string name="m3_sys_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="m3_sys_motion_easing_emphasized_accelerate">cubic-bezier(0.3, 0.0, 0.8, 0.2)</string>
    <string name="m3_sys_motion_easing_emphasized_decelerate">cubic-bezier(0.1, 0.7, 0.1, 1.0)</string>
    <string name="m3_sys_motion_easing_emphasized_path_data">M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1</string>
    <string name="m3_sys_motion_easing_legacy">cubic-bezier(0.4, 0.0, 0.2, 1.0)</string>
    <string name="m3_sys_motion_easing_legacy_accelerate">cubic-bezier(0.4, 0.0, 1.0, 1.0)</string>
    <string name="m3_sys_motion_easing_legacy_decelerate">cubic-bezier(0.0, 0.0, 0.2, 1.0)</string>
    <string name="m3_sys_motion_easing_linear">cubic-bezier(0.0, 0.0, 1.0, 1.0)</string>
    <string name="m3_sys_motion_easing_standard">cubic-bezier(0.2, 0.0, 0.0, 1.0)</string>
    <string name="m3_sys_motion_easing_standard_accelerate">cubic-bezier(0.3, 0.0, 1.0, 1.0)</string>
    <string name="m3_sys_motion_easing_standard_decelerate">cubic-bezier(0.0, 0.0, 0.0, 1.0)</string>
    <string name="material_clock_display_divider">:</string>
    <string name="material_clock_toggle_content_description">Select AM or PM</string>
    <string name="material_hour_selection">Select hour</string>
    <string name="material_hour_suffix">%1$s o\'clock</string>
    <string name="material_minute_selection">Select minutes</string>
    <string name="material_minute_suffix">%1$s minutes</string>
    <string name="material_motion_easing_accelerated">cubic-bezier(0.4, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_decelerated">cubic-bezier(0.0, 0.0, 0.2, 1.0)</string>
    <string name="material_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="material_motion_easing_linear">cubic-bezier(0.0, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_standard">cubic-bezier(0.4, 0.0, 0.2, 1.0)</string>
    <string name="material_slider_range_end">Range end,</string>
    <string name="material_slider_range_start">Range start,</string>
    <string name="material_timepicker_am">AM</string>
    <string name="material_timepicker_clock_mode_description">Switch to clock mode for the time input.</string>
    <string name="material_timepicker_hour">Hour</string>
    <string name="material_timepicker_minute">Minute</string>
    <string name="material_timepicker_pm">PM</string>
    <string name="material_timepicker_select_time">Select time</string>
    <string name="material_timepicker_text_input_mode_description">Switch to text input mode for the time input.</string>
    <string name="max_monthly_payment">Max Monthly Payment</string>
    <string name="month">Month</string>
    <string name="monthly_payment">Monthly Payment</string>
    <string name="mortages">Mortgages</string>
    <string name="mortgage_calculator">Mortgage Calculator</string>
    <string name="mtrl_badge_numberless_content_description">New notification</string>
    <string name="mtrl_checkbox_button_icon_path_checked">M14,18.2 11.4,15.6 10,17 14,21 22,13 20.6,11.6z</string>
    <string name="mtrl_checkbox_button_icon_path_group_name">icon</string>
    <string name="mtrl_checkbox_button_icon_path_indeterminate">M13.4,15 11,15 11,17 13.4,17 21,17 21,15z</string>
    <string name="mtrl_checkbox_button_icon_path_name">icon path</string>
    <string name="mtrl_checkbox_button_path_checked">M23,7H9C7.9,7,7,7.9,7,9v14c0,1.1,0.9,2,2,2h14c1.1,0,2-0.9,2-2V9C25,7.9,24.1,7,23,7z</string>
    <string name="mtrl_checkbox_button_path_group_name">button</string>
    <string name="mtrl_checkbox_button_path_name">button path</string>
    <string name="mtrl_checkbox_button_path_unchecked">M23,7H9C7.9,7,7,7.9,7,9v14c0,1.1,0.9,2,2,2h14c1.1,0,2-0.9,2-2V9C25,7.9,24.1,7,23,7z M23,23H9V9h14V23z</string>
    <string name="other">Other</string>
    <string name="outstanding">Outstanding Taxes</string>
    <string name="principal">Principal</string>
    <string name="result">Result</string>
    <string name="share_result">SHARE RESULT</string>
    <string name="start_date">Start Date</string>
    <string name="statistics">STATISTICS</string>
    <string name="terms">Terms</string>
    <string name="total_paid">Total Paid</string>
    <string name="year">Year</string>
</resources>