<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorLight"
        android:paddingTop="@dimen/_4sdp"
        android:paddingBottom="@dimen/_4sdp">

        <TextView
            android:id="@+id/txtMonthLabel"
            style="@style/header"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="wrap_content"
            android:text="@string/month" />

        <TextView
            style="@style/header"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="wrap_content"
            android:text="@string/principal" />

        <TextView
            style="@style/header"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="wrap_content"
            android:text="@string/interest" />

        <TextView
            style="@style/header"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="wrap_content"
            android:text="@string/total_paid" />

        <TextView
            style="@style/header"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="wrap_content"
            android:text="@string/balance" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/colorGray" />
</LinearLayout>
