<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorLight"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/_4sdp"
        android:paddingBottom="@dimen/_4sdp">

        <TextView
            android:id="@+id/txtMonthLabel"
            style="@style/header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/month" />

        <TextView
            style="@style/header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/investment" />

        <TextView
            style="@style/header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/interest" />

        <TextView
            style="@style/header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/balance" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/colorGray" />
</LinearLayout>
